src/test/deca/syntax/valid/homemade/test/test_lex_val_retour_r.deca
// Description:
//    Programme minimaliste testant le retour à la ligne avec \r dans un string.
//
// Resultats:
//    je
//     suis
//
// Historique:
//    cree le 01/01/2023

{
        println("je \r suis");
}