src/test/deca/syntax/invalid/homemade/test/test_lex_inv_mot_reserve_else2.deca
// Description:
//    tests de programme incorrect lexicalement (else)
//
// Resultats:
//    ligne 9 : Erreur token 
// Historique:
//    cree le 01/01/2023

{
    if (true) {}
    elsif {}
}
